--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,58 @@ a {text-decoration: none }
 main { margin-bottom: 50px }
 main img { max-width: 100% }
 
+#modal-add_success {
+	position: fixed;
+    background: rgba(0,0,0,.8);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+	z-index: 998;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	font-size: 30px;
+    color: #fff;
+}
+#modal-bg {
+	position: fixed;
+	background: rgba(0,0,0,0.8);
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 998;
+	display: none
+}
+.modal {
+	position: fixed;
+	border-radius: 5px;
+	background: #fff;
+	padding: 15px;
+	width: 420px;
+	height: 520px;
+	top: 10%;
+	left: calc(50% - 210px);
+	z-index: 999;
+	display: none
+}
+.modal i.fa-times { cursor: pointer }
+.modal input, .modal textarea {
+	height: auto;
+	border: 1px solid #a2a2a2;
+    padding: 5px 10px;
+    margin-bottom: 30px;
+}
+.modal textarea { width: 100%; height: 100px }
+.modal button {
+	display: block;
+	margin: auto;
+	padding: 10px 30px;
+	margin-bottom: 15px;
+	border-radius: 2px
+}
+
 
 /*      Header        */
 header { padding: 20px 0 30px 0 }
