--- a/style/ws__main.css
+++ b/style/ws__main.css
@@ -29,15 +29,19 @@
 .flex.v-start { align-items: flex-start }
 .flex.v-end { align-items: flex-end }
 
+.w100 { width: 100% }
 .w80 { width: 80% }
 .w75 { width: 75% }
+.w70 { width: 70% }
 .w66 { width: 66% }
 .w50 { width: 50% }
 .w33 { width: 33% }
+.w30 { width: 30% }
 .w25 { width: 25% }
 .w20 { width: 20% }
 .w80-5 { width: calc(80% - 5px) }
 .w75-5 { width: calc(75% - 5px) }
+.w70-5 { width: calc(70% - 5px) }
 .w66-5 { width: calc(66% - 5px) }
 .w50-5 { width: calc(50% - 5px) }
 .w33-5 { width: calc(33% - 5px) }
@@ -64,6 +68,9 @@
 .alert-success { background-color: #00ad00; color: #fff }
 .alert .close { float: right }
 .alert p { margin: 5px !important }
+
+.hide { display: none }
+.show { display: block }
 
 html, body { font-size: 12px }
 nav li { list-style: none }
