--- a/style/style.css
+++ b/style/style.css
@@ -495,6 +495,10 @@ section.sale .sale__wrrap .sale__card .card__img {
 	width: 100%;
 	height: 240px;
 	background-color: #fff;
+	background-image: url(images/no_image2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	overflow: hidden;
 	border-radius: 5px;
 }
 
@@ -1140,6 +1144,10 @@ section.sale__catalog .sale__wrrap .sale__card .card__img {
 	width: 100%;
 	height: 240px;
 	background-color: #fff;
+	background-image: url(images/no_image2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	overflow: hidden;
 	border-radius: 5px;
 }
 .card__rating .rating:not(:checked) > input {
@@ -1561,6 +1569,9 @@ main.detal section.detal__info .img__big {
 	height: 410px;
 	border-radius: 5px;
 	background-color: #fefefe;
+	background-image: url(images/no_image2.png);
+	background-repeat: no-repeat;
+	background-position: center;
 }
 main.detal section.detal__info .img__big i.img__discount {
 	position: absolute;
