--- a/style/style.css
+++ b/style/style.css
@@ -164,7 +164,7 @@ header .header__shoping a.header__cart {
     align-items: center;
 }
 header .header__shoping .header__cart img { padding: 10px; }
-header .header__shoping .header__user button {
+header .header__shoping .header__user {
 	outline: none;
 	font-size: 25px;
 	background-color: #fff;
@@ -177,49 +177,8 @@ header .header__shoping .header__user button {
 	align-items: center;
 	cursor: pointer;
 }
-header .header__shoping .header__user button img { padding: 10px 12px;}
-header .header__shoping .header__user { position: relative;} 
-header .header__shoping .header__user .user__login {
-	position: absolute;
-	top: -7px;
-	right: 55px;
-	display: none;
-}
-header .header__shoping .header__user:hover > .user__login { display: block }
-header .header__shoping .header__user .user__login a.user__in {
-	width: 137px;
-	height: 29px;
-	text-align: center;
-	background: #fff;
-	font-size: 16px;
-	font-weight: 400;
-	color: #000;
-	cursor: pointer;
-	border-radius: 5px;
-	margin-bottom: 3px;
-	display: flex;
-    justify-content: center;
-	align-items: center;
-}
-header .header__shoping .header__user .user__login a.user__registration {
-	width: 137px;
-	height: 29px;
-	text-align: center;
-	background: #fff;
-	font-size: 16px;
-	font-weight: 400;
-	cursor: pointer;
-	color: #000;
-	border-radius: 5px;
-	display: flex;
-    justify-content: center;
-	align-items: center;
-}
-header .header__shoping .header__user .user__login a.user__in:hover,
-header .header__shoping .header__user .user__login a.user__registration:hover {
-	background: #82C166;
-	color: #fff;
-}
+header .header__shoping .header__user img { padding: 10px 12px }
+
 header .header__shoping { position: relative; }
 header .header__shoping i.label {
 	display: block;
@@ -1144,6 +1103,7 @@ section.sale__catalog .sale__wrrap .sale__card .card__img {
 	width: 100%;
 	height: 240px;
 	background-color: #fff;
+	background-size: 71%;
 	background-image: url(images/no_image2.png);
 	background-repeat: no-repeat;
 	background-position: center;
