--- a/style/style.css
+++ b/style/style.css
@@ -84,6 +84,18 @@ main img { max-width: 100% }
 
 
 /*      Header        */
+#top_header { padding-top: 2px }
+#top_header div {
+	display: inline-block;
+    font-size: 13px;
+    color: #8c8c8c;
+}
+#top_header div a.active {
+	font-weight: 700;
+}
+#top_header div img { height: 12px }
+#top_header div.language { margin-right: 50px }
+#top_header div.profile a { margin-right: 20px }
 header { padding: 20px 0 30px 0 }
 header .mob__menu,
 header div.flex .fa-bars,
@@ -96,11 +108,11 @@ header form .fa-chevron-down {
 	position: absolute;
 	top: 50%;
     transform: translateY(-50%);
-    left: 145px;
+    left: 175px;
 }
 header form select {
 	height: 40px;
-	width: 170px;
+	width: 200px;
 	border-radius: 3px;
 	border: 0;
 	padding: 0 7px;
@@ -113,7 +125,7 @@ header form select {
 }
 header form input {
 	height: 40px;
-    width: 210px;
+    width: 400px;
     border-radius: 3px;
     border: 0;
     padding: 0 10px;
@@ -1047,7 +1059,7 @@ section.sale__catalog .sale__wrrap {
 	margin-top: 25px;
 }
 section.sale__catalog .sale__wrrap .sale__card {
-	width: 25%;
+	width: 24%;
 	padding: 8px;
 	min-height: auto;
 	margin-bottom: 80px;
@@ -1056,9 +1068,10 @@ section.sale__catalog .sale__wrrap .sale__card {
 	border: 2px solid transparent;
 	border-radius: 10px;
 	position: relative;
+	border-color: #fefefe;
 }
 section.sale__catalog .sale__wrrap .sale__card:hover {
-    border-color: #fefefe;
+    border-color: #7cbe49;
 }
 section.sale__catalog .sale__wrrap .sale__card.no_availabilaty:hover {
     border-color: #ffc505;
