--- a/app/services/cart/style/cart.css
+++ b/app/services/cart/style/cart.css
@@ -67,7 +67,8 @@
 	border-radius: 2px;
 	cursor: default;
 	font-size: 20px;
-	text-decoration: none
+	text-decoration: none;
+	border: none
 }
 #cart .checkout.active { cursor: pointer; background: #74C186 }
 #cart .checkout.active:hover { background: #4d945d }
